[package]
name = "discord_token_grabber"
version = "2.0.0"
authors = ["moneysake <moneysake@tutanota.com>", "Rayrsn <https://rayr.ml/LinkInBio>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "1.1.1"
dirs = "2.0"
regex = "1.3.9"
